test/samples/error/err_duplicate_func.w
func foo(x:int){}
func foo(y:int){}

